--- a/README.org
+++ b/README.org
@@ -30,6 +30,12 @@
 - [[http://sachachua.com/blog/2013/05/how-to-learn-emacs-a-hand-drawn-one-pager-for-beginners/][How to learn Emacs]]
 - [[http://cestlaz.github.io/stories/emacs][Using Emacs video series]]
 
+* Vim Links 
+- [[https://www.linux.com/learn/vim-101-beginners-guide-vim][Vim Basics]]
+- [[https://scotch.io/tutorials/getting-started-with-vim-an-interactive-guide][Interactive Vim Guide]]
+- [[https://vim.rtorr.com/][Vim Cheatsheet]]
+- [[https://www.openvim.com/][Online vimtutor]]
+
 * Resources
 ** Unix Command Line / Shell
 1) [[https://hellowebbooks.com/learn-command-line/][Learn the Command Line]] - Mac version
